# cliq

./: .example_env  Cargo.toml  README.md
src/: ai_logic.rs  app.rs  input.rs  main.rs  popups.rs  run.rs  settings.rs  tui.rs
