[package]
name = "cliq"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
serde_json = "1.0.145"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
color-eyre = "0.6.5"
