[package]
name = "cliq"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
dotenvy = "0.15"

reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
ratatui-textarea = "0.9.0"
textwrap = "0.16.2"
