[package]
name = "cliq"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
dotenvy = "0.15"

ratatui = "0.30.0"
ratatui-textarea = "0.9.0"
textwrap = "0.16.2"

reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
toml = "1.1.2"
dirs = "6.0.0"
